feat: update plugin update checker to use Spiget API
- Replaced GitHub API with Spiget API for checking plugin updates.
- Enhanced error handling and logging for update checks.
- Added a method to clean version strings for accurate comparison.
- Improved user feedback for available updates with detailed logging.