@@ -2,20 +2,20 @@ package fr.ax_dev.universejobs.update;
 
 import fr.ax_dev.universejobs.UniverseJobs;
 
+import java.io.BufferedReader;
 import java.io.IOException;
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
-import java.nio.file.Path;
+import java.io.InputStreamReader;
+import java.net.HttpURLConnection;
+import java.net.URL;
 import java.util.logging.Level;
 
 /**
- * Checks GitHub for plugin updates and downloads new versions automatically.
+ * Checks Spigot for plugin updates using the Spiget API.
  */
 public class UpdateChecker {
 
-    private static final String API_URL = "https://api.github.com/repos/UniverseStudiosMC/UniverseJobs/releases/latest";
+    private static final String SPIGOT_API_URL = "https://api.spiget.org/v2/resources/128572/versions/latest";
+    private static final int RESOURCE_ID = 128572;
 
     private final UniverseJobs plugin;
 
@@ -24,58 +24,86 @@ public class UpdateChecker {
     }
 
     /**
-     * Check GitHub for updates and download the newest jar if available.
+     * Check Spigot for updates using the Spiget API.
      */
     public void checkForUpdates() {
         plugin.getServer().getScheduler().runTaskAsynchronously(plugin, () -> {
             try {
-                HttpClient client = HttpClient.newHttpClient();
-                HttpRequest request = HttpRequest.newBuilder()
-                        .uri(URI.create(API_URL))
-                        .header("Accept", "application/vnd.github+json")
-                        .build();
-                HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
-                if (response.statusCode() != 200) {
-                    plugin.getLogger().warning("Update check failed: HTTP " + response.statusCode());
+                URL url = new URL(SPIGOT_API_URL);
+                HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+                connection.setRequestMethod("GET");
+                connection.setRequestProperty("User-Agent", "UniverseJobs-UpdateChecker");
+                connection.setConnectTimeout(5000);
+                connection.setReadTimeout(5000);
+
+                int responseCode = connection.getResponseCode();
+                if (responseCode != 200) {
+                    plugin.getLogger().warning("Update check failed: HTTP " + responseCode);
                     return;
                 }
 
-                String body = response.body();
-                String latestTag = extractValue(body, "\"tag_name\":\"");
-                if (latestTag == null) {
-                    plugin.getLogger().warning("Could not parse latest version from GitHub response.");
+                StringBuilder response = new StringBuilder();
+                try (BufferedReader reader = new BufferedReader(new InputStreamReader(connection.getInputStream()))) {
+                    String line;
+                    while ((line = reader.readLine()) != null) {
+                        response.append(line);
+                    }
+                }
+
+                String responseBody = response.toString();
+                String latestVersion = extractValue(responseBody, "\"name\":\"");
+
+                if (latestVersion == null) {
+                    plugin.getLogger().warning("Could not parse latest version from Spigot response.");
                     return;
                 }
 
                 String currentVersion = plugin.getDescription().getVersion();
-                if (currentVersion.equalsIgnoreCase(latestTag)) {
-                    return; // already up to date
-                }
 
-                plugin.getLogger().info("New version available: " + latestTag + " (current: " + currentVersion + ")");
+                // Clean version strings for comparison
+                String cleanLatest = cleanVersionString(latestVersion);
+                String cleanCurrent = cleanVersionString(currentVersion);
 
-                String downloadUrl = extractValue(body, "\"browser_download_url\":\"");
-                if (downloadUrl == null) {
-                    plugin.getLogger().warning("No download URL found for latest release.");
+                if (cleanCurrent.equals(cleanLatest)) {
+                    plugin.getLogger().info("UniverseJobs is up to date! (Version: " + currentVersion + ")");
                     return;
                 }
 
-                Path pluginsDir = plugin.getDataFolder().getParentFile().toPath();
-                Path target = pluginsDir.resolve("UniverseJobs-" + latestTag + ".jar");
+                plugin.getLogger().info("═══════════════════════════════════════");
+                plugin.getLogger().info("    NEW UPDATE AVAILABLE!");
+                plugin.getLogger().info("    Current: " + currentVersion);
+                plugin.getLogger().info("    Latest:  " + latestVersion);
+                plugin.getLogger().info("    Download: https://www.spigotmc.org/resources/128572/");
+                plugin.getLogger().info("═══════════════════════════════════════");
 
-                HttpRequest downloadRequest = HttpRequest.newBuilder().uri(URI.create(downloadUrl)).build();
-                HttpResponse<Path> downloadResponse = client.send(downloadRequest, HttpResponse.BodyHandlers.ofFile(target));
-                if (downloadResponse.statusCode() == 200) {
-                    plugin.getLogger().info("Downloaded update to " + target.getFileName() + ". Please restart the server to apply the update.");
-                } else {
-                    plugin.getLogger().warning("Failed to download update: HTTP " + downloadResponse.statusCode());
+            } catch (IOException e) {
+                if (plugin.getServer().getPluginManager().getPlugin("UniverseJobs").isEnabled()) {
+                    plugin.getLogger().log(Level.WARNING, "Could not check for updates: " + e.getMessage());
                 }
-            } catch (IOException | InterruptedException e) {
+            } catch (Exception e) {
                 plugin.getLogger().log(Level.WARNING, "Error while checking for updates", e);
             }
         });
     }
 
+    /**
+     * Clean version string for comparison by removing common prefixes/suffixes.
+     */
+    private String cleanVersionString(String version) {
+        if (version == null) return "";
+
+        // Remove common prefixes like "v", "version-", etc.
+        version = version.replaceAll("^(v|version-?)", "");
+
+        // Remove common suffixes like "-dev", "-SNAPSHOT", etc.
+        version = version.replaceAll("(-dev|-SNAPSHOT|-beta|-alpha).*$", "");
+
+        return version.trim();
+    }
+
+    /**
+     * Extract value from JSON response.
+     */
     private String extractValue(String json, String key) {
         int start = json.indexOf(key);
         if (start == -1) return null;
